apply plugin: 'com.android.application'

android {
    compileSdkVersion 29
    buildToolsVersion "29.0.2"

    defaultConfig {
        applicationId "com.group23.securex"
        minSdkVersion 16
        targetSdkVersion 29
        versionCode 1
        versionName "1.0"

        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
    }

    buildTypes {
        release {
            minifyEnabled false
            proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
        }
    }

    aaptOptions {
        noCompress "tflite"
        noCompress "lite"
    }

    viewBinding {
        enabled = true
    }

    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_8
        targetCompatibility JavaVersion.VERSION_1_8
    }

    testOptions {
        unitTests.includeAndroidResources = true


        unitTests {
            // By default, local unit tests throw an exception any time the code you are testing tries to access
            // Android platform APIs (unless you mock Android dependencies yourself or with a testing
            // framework like Mockito). However, you can enable the following property so that the test
            // returns either null or zero when accessing platform APIs, rather than throwing an exception.
            returnDefaultValues true

            // Encapsulates options for controlling how Gradle executes local unit tests. For a list
            // of all the options you can specify, read Gradle's reference documentation.
            all {
                // Sets JVM argument(s) for the test JVM(s).
                jvmArgs '-XX:MaxPermSize=256m'

                // You can also check the task name to apply options to only the tests you specify.
                if (it.name == 'testDebugUnitTest') {
                    systemProperty 'debug', 'true'
                }

            }
        }
    }
}


dependencies {
    def nav_version = '2.3.0-alpha06'

    implementation fileTree(dir: 'libs', include: ['*.jar'])

    implementation 'androidx.appcompat:appcompat:1.1.0'
    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
    implementation 'com.google.android.material:material:1.1.0'
    implementation 'androidx.vectordrawable:vectordrawable:1.1.0'
    implementation 'androidx.navigation:navigation-fragment:2.2.2'
    implementation 'androidx.navigation:navigation-ui:2.2.2'
    implementation 'androidx.lifecycle:lifecycle-extensions:2.2.0'
    testImplementation 'junit:junit:4.13'
    androidTestImplementation 'androidx.test.ext:junit:1.1.1'
    androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
    testImplementation 'org.robolectric:robolectric:4.3.1'
    androidTestImplementation 'com.android.support.test:rules:1.0.2'


    implementation "androidx.navigation:navigation-fragment:$nav_version"
    implementation "androidx.navigation:navigation-ui:$nav_version"

    implementation 'com.github.GoodieBag:Pinview:v1.4'
    implementation 'androidx.biometric:biometric:1.0.1'

    implementation 'com.rvalerio:fgchecker:1.1.0'
    implementation 'com.eightbitlab:blurview:1.6.3'
    implementation files('libs/activation.jar')
    implementation files('libs/additionnal.jar')
    implementation files('libs/mail.jar')

    implementation 'gun0912.ted:tedpermission:2.2.3'

    implementation 'androidx.fragment:fragment:1.3.0-alpha05'

    androidTestImplementation "androidx.navigation:navigation-testing:$nav_version"

    def fragment_version = "1.2.4"
    // ...
    debugImplementation "androidx.fragment:fragment-testing:$fragment_version"

    def kotlin_version = '1.3.72'
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
    implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk8:$kotlin_version"
    implementation "androidx.recyclerview:recyclerview-selection:1.1.0-rc01"
    implementation 'io.paperdb:paperdb:2.7.1'

    implementation 'com.karumi:dexter:6.1.2'
    implementation 'com.github.codekidX:storage-chooser:2.0.4.4'
    implementation 'com.github.ghost1372:Mzip-Android:0.4.0'

    implementation 'de.hdodenhof:circleimageview:3.1.0'
    implementation 'com.mikhaellopez:circularimageview:4.2.0'

    implementation 'org.tensorflow:tensorflow-lite:1.13.1'


    implementation 'androidx.constraintlayout:constraintlayout:2.0.0-beta3'


}
